lab1/Test/L1-A-8-97.cmm
struct CBIdOYwF1E4cI1 ;
struct {
};
struct p {
  int dLb5UjbMqm4J7an ;
}onsMlOL , L 

;
float Kud42BSfAT31Mk ( ) {
  int pri0gwToNAS6pF3 = AZ8jNk1Ys2dJAYp9 || HGFPYFkt8_Q7 
    == CY + usPgxYys * - Av1cOUf4P7Ov [ JV7mpe7aA6mgm 
    = lLkDF4fllB2UWYh6pPV && ! OaA58yQaEBpSCP ( Gz8VJl9jrQhpYlk 
    > CvwS8TNvNQer * ! MDbR1 [ bS4xSyBWBmh_fL0V6Go || 
    KmKDPa6tNyJ >= gq1zED1yL0thWOj4 ( iWBrb77HY 497095156 
    , e3NiXzUUQL1Y <= ( him0PfVb8H5lOC0im3 < zaP2VBEFrX6imxW 
    ( h3ADOijXcgH9ZwssBFkK != ZPsB0mm7wIZxjo / 1587921005.890685100 
    . tqoUazBiAPvF11 ) * slYCp73afa ) ) ] ) / - 154993981 
    ] - ! mgS ( ) . Xvv4ckNDdWtPGNGyG , WMXRPeS0TC [ 78642016 
    ] ;
}
int ;
int oG2LaLbS9fsyKB ( int hPwczqa , int EgbrRDGCneDhFc2rH74Y 
  ) {
}
int ;
int x8fWMdYyGhCP9 ( int && Rv7_XLzSZgbdB ) {
  if ( AdzovzIUnt9xfOGZU )   return GGCBXgvFyWuAU 
    ;
else   if ( Af2P9q3JmyvBZV ) {
  }

  LWhslWge9U5wIE ;
}
int iO ( ) {
  i7tPn 805522599.440872456 ;
  while ( JKR7OwEpLPfr7W1J 1601372566.911741826 ) 
      if ( WEWAmdLXbskohIZewYo )   FwaZKGm3Efs7L ;
else   PRABazD_hwHn_v3vE5xg ;


] }
